Add getTabCompletions() and alternate messages for /gver